fix: play-icon contrast in gray-bg dark mode

--- a/source/_patterns/01-atoms/icons/play-icon/_play-icon.scss
+++ b/source/_patterns/01-atoms/icons/play-icon/_play-icon.scss
@@ -33,3 +33,24 @@ button.play-link {
     border-color: $dark-blue;
   }
 }
+
+/* Dark mode overrides for play-icon in banner overlays */
+.dark-mode {
+  .gray-overlay {
+    .play-link {
+      svg path {
+        fill: $darkest-blue;
+
+        &:hover,
+        &:focus,
+        &:active {
+          fill: $dark-blue;
+        }
+      }
+
+      &:focus {
+        border-color: $dark-blue;
+      }
+    }
+  }
+}
